--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ p {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #2589bd;
 }
-
+/* consolidated repeating classes into one */
 .benefit {
   margin-bottom: 32px;
   color: #ffffff;
